# lian-li-control

./: 60-lian-li.rules  LICENSE  flake.nix  lian-li-control.cabal  lian-li-pump-control.cabal  readme.md
fan/: Main.hs
pump/: Main.hs
